<resources>
    <string name="app_name">MyAI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="brightness">亮度</string>
    <string name="vibrate">震动</string>
    <string name="clock">时钟</string>
    <string name="microphone">话筒</string>
    <string name="speaker">扬声器</string>
    <string name="wifi">无线网</string>
    <string name="mobiledata">蜂窝网</string>
    <string name="gps">定位</string>
    <string name="bluetooth">蓝牙</string>
    <string name="rotation">旋转</string>
    <string name="center">微信</string>
    <string name="choice">选</string>
</resources>
