<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/wifi_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dynaxtech.william.myai.FlowView
            android:id="@+id/wifi_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:visibility="visible" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/wifi_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <!--        <HorizontalScrollView
            android:id="@+id/InputTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

-->
            <LinearLayout
                android:id="@+id/InputTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/choice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:elevation="0dp"
                    android:onClick="onClickWifi"
                    android:text="@string/choice"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <!--                    android:background="@drawable/ninepatchon" -->
                <Button
                    android:id="@+id/wifi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:longClickable="true"
                    android:onClick="onClickWifi"
                    android:padding="4dp"
                    android:text="@string/wifi"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

                <Button
                    android:id="@+id/mobiledata"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:longClickable="true"
                    android:onClick="onClickWifi"
                    android:padding="4dp"
                    android:text="@string/mobiledata"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:padding="4dp"
                    android:text="@string/bluetooth"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/nfc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:text="NFC"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
                <!--
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchoff"
                    android:text="Inputs"
                    android:textAlignment="center"
                    android:textSize="24sp" />
          -->
            </LinearLayout>
            <!--        </HorizontalScrollView> -->

            <LinearLayout
                android:id="@+id/InputLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/OutputBottom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InputTop">

                <Button
                    android:id="@+id/gps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:longClickable="true"
                    android:onClick="onClickWifi"
                    android:text="@string/gps"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/brightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ninepatchon"
                    android:text="@string/brightness"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ninepatchon"
                    android:text="@string/clock"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/microphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ninepatchon"
                    android:text="@string/microphone"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/OutputBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/screenrot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:padding="4dp"
                    android:text="@string/rotation"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/nodisturbe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:padding="4dp"
                    android:text="Do Not Disturbe"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/OutputRight"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/OutputBottom"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InputTop">


                <TextView
                    android:id="@+id/speaker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:padding="4dp"
                    android:text="@string/speaker"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/vibrator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ninepatchon"
                    android:padding="4dp"
                    android:text="@string/vibrate"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/me"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ninepatchon"
                app:layout_constraintBottom_toTopOf="@+id/OutputBottom"
                app:layout_constraintLeft_toRightOf="@+id/InputLeft"
                app:layout_constraintRight_toLeftOf="@+id/OutputRight"
                app:layout_constraintTop_toBottomOf="@+id/InputTop">

                <EditText
                    android:id="@+id/me1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/mewx"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="131dp"
                    tools:layout_editor_absoluteY="205dp" />

                <TextView
                    android:id="@+id/me2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorReverse" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</RelativeLayout>